# flaskmtm

./: pyproject.toml
src/: run.py
src/flaskmtm/: __init__.py  config.py
src/flaskmtm/main/: __init__.py  routes.py
tests/: test_flaskmtm.py
