[tool.poetry]
name = "flaskmtm"
version = "0.1.0"
description = ""
authors = ["Ignatev Nikita <nikitaignatiev@gmail.com>"]
readme = "README.md"
packages = [{include = "flaskmtm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
